# beyond-the-smile-paper

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: DATA.md
notebooks/: 01_eda.ipynb  01_eda.py
src/: ablate.py  analyze_anomaly.py  arb_project.py  baseline_pca.py  baseline_smile.py  build_grid.py  clean.py  compare_joint.py  compare_runs.py  config.py  data_btc.py  eval_cross_asset.py  eval_hybrid.py  eval_structured.py  eval_vae.py  fetch_binance_eoh.py  make_arch_fig.py  make_paper_figs.py  model_attn.py  model_conv.py  model_smooth.py  model_vae.py  train_vae.py
