[project]
name = "vae-vol-paper"
version = "0.1.0"
description = "VAE for crypto options volatility surfaces (Binance BTC/ETH)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "scipy>=1.13",
    "torch>=2.3",
    "tqdm>=4.66",
]

[tool.uv]
package = false
